# small_diffusion_model

./: .gitignore  environment.yml  pyproject.toml
.githooks/: pre-commit
analysis/assorted/: Fleetsize_plot.py
analysis/data_kf/: KF25 Transport - dataark 08-25.xlsx  KF25 Transport Extract.xlsx
analysis/scenarios/: run_constant.py  run_phase_in.py
analysis/scenarios/Matching_KF25/: run.py
analysis/scenarios/constant/: run.py
analysis/scenarios/phase_in/: plots.py  run.py
analysis/scenarios/phase_in_v2/: run.py
src/: data_import.py  data_process.py  forecast.py  run_forecast.py  run_forecast_v2.py  scrappage.py  visualisation.py
src/forecast/: BaseScenario.py  ForecastConfig.py  ModelConfig.py  base_wrangler.py  core.py  data_wrangler.py  plotting.py  wrangler_helpers.py
src/forecast/scenarios/: ConstantScenario.py  KFScenario.py  PhaseInScenario.py
tests/: test_markov_step.py  test_phase_in_consistency.py
